@@ -1,5 +1,11 @@
 2017-03-16  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/80041
+	* src/c++11/codecvt.cc (__codecvt_utf16_base<wchar_t>::do_out)
+	(__codecvt_utf16_base<wchar_t>::do_in): Convert char arguments to
+	char16_t to work with UTF-16 instead of UTF-8.
+	* testsuite/22_locale/codecvt/codecvt_utf16/80041.cc: New test.
+
 	* src/c++11/codecvt.cc (codecvt<char16_t, char, mbstate_t>)
 	(codecvt<char32_t, char, mbstate_t>, __codecvt_utf8_base<char16_t>)
 	(__codecvt_utf8_base<char32_t>, __codecvt_utf8_base<wchar_t>)
